# mtgscan

./: .gitignore  kaldheim.txt  kaldheim2.txt  mysticalarchive.txt  prices.txt  pyproject.toml  requirements.txt  strixhaven.txt
mtgscan/: cardlist.py  example.py
mtgscan/ocr/: azure.py
tests/: test.py
