[tool.poetry]
name = "mtgscan"
version = "1.0.6"
description = "Convert an image containing Magic cards to decklist"
authors = ["qfortier <qpfortier@gmail.com>"]
description = "Convert an image containing Magic cards to decklist"
homepage = "https://github.com/fortierq/MTGScan"
keywords = ["mtg", "scan", "OCR", "magic", "cards", "computer vision"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fortierq/MTGScan"

[tool.poetry.dependencies]
boto3 = "^1.16.59"
matplotlib = "^3.3.3"
numpy = "^1.19.3"
psutil = "^5.8.0"
python = "^3.8"
requests = "^2.25.0"
symspellpy = "^6.7.0"
streamlit = "^0.79.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.6.0"
yapf = "^0.30.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
